Set up universal margin for body, html, p, and headers. Set body font-size and background

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,6 +1,17 @@
 // See: https://sass-lang.com/
+@import 'typography';
+@import 'colors';
 
 body,
-html {
+html,
+p,
+h1,
+h2,
+h3 {
   margin: 0;
+}
+
+body {
+  font-size: $fs-400;
+  background-color: $background;
 }
