--- a/styles/card.scss
+++ b/styles/card.scss
@@ -20,10 +20,6 @@
   transition: 0.2s ease;
   position: relative;
 
-  &:hover {
-    transform: scale(1.04);
-  }
-
   p {
     &:first-of-type {
       font-weight: 600;
@@ -31,12 +27,17 @@
     margin: 0;
   }
 
+  &--hover {
+    &:hover {
+      transform: scale(1.04);
+    }
+  }
   &__image {
     width: 100%;
     min-height: 10rem;
     border-radius: 10px 10px 0 0;
 
-    background-image: url('../images/sushi-menu-item.jpg');
+    // background-image: url('../images/sushi-menu-item.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -60,9 +61,9 @@
 
     left: 45%;
 
-    @include landscape {
-      left: 42%;
-    }
+    // @include landscape {
+    //   left: 42%;
+    // }
   }
 
   &__footer {
