--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -1,4 +1,5 @@
 //TEMPORARY STYLES, WILL UPDATE AND MODULARIZE
+@import 'colors';
 .auth-form-outer{
   max-width: 600px;
   margin: auto;
@@ -14,7 +15,7 @@
 .header {
   font-size: 2rem;
   border-bottom: 1px solid #f0f0f0;
-	background-color: #365fc7;
+	background-color: $primary;
 	padding: 20px 40px;
   color: #fefefe;
   text-align: center;
