--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -77,18 +77,19 @@
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
+.dropdown-content button {
+  color: blbuttonck;
   padding: 12px 16px;
   text-decoration: none;
   border: none;
   width: 100%;
   display: block;
   text-align: left;
+  cursor: pointer;
 }
 
 /* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
+.dropdown-content button:hover {
   background-color: black;
 }
 
