--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,6 +1,6 @@
-@import 'colors';
-@import 'typography';
-@import 'media-queries';
+@import "colors";
+@import "typography";
+@import "media-queries";
 
 .navbar {
   display: flex;
@@ -23,29 +23,29 @@
 
   &__item {
     display: flex;
-    align-items: center;
-    position:relative;
+    align-items: flex-end;
+    position: relative;
     color: $light;
     justify-content: center;
     text-decoration: none;
     padding: 0 10px;
-    letter-spacing: 0.5px;;
+    letter-spacing: 0.5px;
     font-weight: 600;
     font-size: $fs-400;
     cursor: pointer;
 
     @include landscape {
-      font-size: $fs-600;
+      font-size: 1.7rem;
     }
 
     &:hover {
       color: $orangered;
       transition: all 0.3s ease;
-      }
+    }
   }
 
   &__logo {
-    max-width: 5rem;
+    max-width: 11rem;
     padding: 0;
   }
 }
@@ -68,7 +68,7 @@
 
 .dropdown span {
   font-weight: 600;
-    font-size: $fs-600;
+  font-size: $fs-600;
   pointer-events: none;
 }
 
@@ -78,7 +78,7 @@
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1111;
 }
 
