--- a/styles/pending-card.scss
+++ b/styles/pending-card.scss
@@ -1,17 +1,56 @@
 article {
+  padding: 10px;
   width: 30%;
   margin: 20px 20%;
-  border: solid black;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  box-shadow: 0 4px 13px 2px rgb(0 0 0 / 21%);
+  border-radius: 1rem;
 }
 article header {
-  padding: 20px;
+  padding: 10px 5px;
+  border-bottom: 1px solid gray;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
+article p {
+  padding: 5px;
+  text-align: left;
+}
 article table {
+  margin-top: 20px;
+  text-align: left;
+  width: 100%;
+}
+.ready-btn {
+  -webkit-border-radius: 11px;
+  -moz-border-radius: 11px;
+  border-radius: 11px;
+  color: #000000;
+  font-family: Helvetica;
+  font-size: 16px;
+  font-weight: 100;
+  padding: 12px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 0 7px 0 #5b5b5b;
+  -moz-box-shadow: 0 0 7px 0 #5b5b5b;
+  box-shadow: 0 0 7px 0 #5b5b5b;
+  border: solid #000000 1px;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+}
+
+.ready-btn:hover {
+  background: #337fed;
+  border: solid #337fed 1px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  text-decoration: none;
 }
 article footer {
   padding: 20px;
