--- a/styles/pop-ups.scss
+++ b/styles/pop-ups.scss
@@ -8,8 +8,10 @@
   z-index: 1;
 }
 .popup-window {
-  padding: 20px;
-  background-color: yellow;
+  box-shadow: 0 4px 13px 2px rgb(0 0 0 / 21%);
+  border-radius: 1rem;
+  padding: 40px 20px;
+  background-color: #ffff;
   position: fixed;
   display: flex;
   align-items: center;
@@ -22,8 +24,32 @@
 }
 
 .popup-button {
-  margin: 20px auto;
-  display: block;
-  background-color: red;
-  color: white;
+  margin-top: 40px;
+  -webkit-border-radius: 11px;
+  -moz-border-radius: 11px;
+  border-radius: 11px;
+  color: #4a4a4a;
+  font-family: Helvetica;
+  font-size: 16px;
+  font-weight: 100;
+  padding: 12px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 0 7px 0 #5b5b5b;
+  -moz-box-shadow: 0 0 7px 0 #5b5b5b;
+  box-shadow: 0 0 7px 0 #5b5b5b;
+  border: solid #000000 1px;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+}
+
+.popup-button:hover {
+  background: #4a4a4a;
+  color: #ffffff;
+  border: solid #4a4a4a 1px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  text-decoration: none;
 }
