--- a/styles/pending-card.scss
+++ b/styles/pending-card.scss
@@ -15,10 +15,10 @@ article header {
   flex-direction: row;
   justify-content: space-between;
 }
-article p {
-  padding: 5px;
-  text-align: left;
-}
+// article p {
+//   padding: 5px;
+//   text-align: left;
+// }
 article table {
   margin-top: 20px;
   text-align: left;
