--- a/styles/admin-history.scss
+++ b/styles/admin-history.scss
@@ -102,3 +102,12 @@
   padding-right: 0.3rem;
   padding-top: 0.3rem;
 }
+
+#receipt {
+  align-items: center;
+  margin: 0 auto;
+  max-width: 50%;
+  button {
+    width: 150px;
+  }
+}
